flux-modules/extras/wordpress/deploy/wp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wp-${wp_name}
spec:
  parentRefs:
    - name: cilium-gw
      namespace: kube-system
  hostnames:
    - "${wp_hostname}"
    - "www.${wp_hostname}"
  rules:
    - backendRefs:
        - name: wp-${wp_name}
          port: 80
